# OMeGA-gui

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
cmake/: CPackConfig.cmake  CompilerWarnings.cmake  FindSDL2.cmake  FindSDL2_mixer.cmake  Findfmt.cmake  Findspdlog.cmake  arch.cmake  clang-format.cmake
